Fix paragraph margins

--- a/normalize.css
+++ b/normalize.css
@@ -272,6 +272,10 @@ article hr {
    Paragraphs
    ========================================================================== */
 
+p {
+    margin: 0 0 1.375em;
+}
+
 article p {
     margin: 0;
 }
