--- a/normalize.css
+++ b/normalize.css
@@ -419,7 +419,7 @@ form {
 
 fieldset {
     margin: 0 0.125em 1.375em;
-    padding: 0.35em 1.125em 0.75em;
+    padding: 0.4375em 1.125em 0.8125em;
 }
 
 /*
@@ -430,10 +430,11 @@ fieldset {
 legend {
     border: 0; /* 1 */
     *margin-left: -7px; /* 2 */
+    padding: 0.6875em 0.125em;
+    margin-left: 1.375em;
 }
 
 /*
- * 1. Corrects font size not being inherited in all browsers
  * 2. Addresses margins set differently in IE6/7, F3/4, S5, Chrome
  * 3. Improves appearance and consistency in all browsers
  */
@@ -442,7 +443,8 @@ button,
 input,
 select,
 textarea {
-    font-size: 100%; /* 1 */
+    font-size: 0.9375em; /* 15px */
+    padding: 0 0.067em 0.067em 0.067em; /* 0 1px 1px 1px; */
     margin: 0; /* 2 */
     vertical-align: baseline; /* 3 */
     *vertical-align: middle; /* 3 */
