--- a/normalize.css
+++ b/normalize.css
@@ -8,18 +8,27 @@
  * Corrects block display not defined in IE6/7/8/9 & FF3
  */
 
+address,
 article,
 aside,
+blockquote,
 details,
-figcaption,
+dl,
+fieldset,
 figure,
 footer,
 header,
 hgroup,
 nav,
-section {
+ol,
+p,
+pre,
+section,
+ul {
     display: block;
+    margin: 1.375em 0; /* POP */
 }
+
 
 /*
  * Corrects inline-block display not defined in IE6/7/8/9 & FF3
@@ -78,7 +87,8 @@ textarea {
     font-family: 'Helvetica Neue', arial, clean, sans-serif; /* POP */
 }
 
-/*
+/* POP:
+ *
  * 1. "The 66-character line (counting both letters and spaces) is widely regarded
  *     as ideal"
  *    http://webtypography.net/Rhythm_and_Proportion/Horizontal_Motion/2.1.2/
@@ -87,9 +97,9 @@ textarea {
 article {
     font-family: 'Sabon LT Std', 'Hoefler Text', 'Palatino Linotype', 'Book Antiqua', serif;
     width: 33.0em; /* 1 */
-    margin: 0 auto;
-    padding: 1.375em;
     text-align: justify;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* =============================================================================
@@ -108,14 +118,14 @@ a:visited {
 a,
 a:link,
 a:visited {
-    font-weight: inherit;
-    text-decoration: none;
+    font-weight: inherit; /* POP */
+    text-decoration: none; /* POP */
 }
 
 a:hover,
 a:focus,
 a:active {
-    text-decoration: underline;
+    text-decoration: underline; /* POP */
 }
 
 /*
@@ -159,7 +169,8 @@ strong {
 }
 
 blockquote {
-    margin: 1.375em 0 1.375em 2.75em; /* POP */
+    padding-left: 1.375em; /* POP */
+    margin-left: 1.375em; /* POP */
     font-style: italic;
 }
 
@@ -185,14 +196,13 @@ mark {
  * en.wikipedia.org/wiki/User:Davidgothberg/Test59
  */
 
-/* pre, */
 code,
 kbd,
 samp {
     font-family: monospace, monospace;
     _font-family: 'courier new', monospace;
     font-size: 0.875em; /* POP: 14px */
-    line-height: 1.5714; /* 22px */
+    line-height: 1.5714; /* POP: 22px */
 }
 
 /*
@@ -200,12 +210,12 @@ samp {
  */
 
 pre {
-    font-family: inherit;
+    font-family: inherit; /* POP */
     white-space: pre;
     white-space: pre-wrap;
     word-wrap: break-word;
-    padding: 0.916em 1.375em; /* POP */
-    margin: 0.5em 1.375em; /* POP */
+    margin-left: 1.375em; /* POP */
+    padding-left: 1.375em; /* POP */
 }
 
 /*
@@ -256,6 +266,9 @@ sub {
    Headings (POP)
    ========================================================================== */
 
+/* For these to look right, an element placed after an h2-h6 should have a
+ * top margin of 22px (1.375em).
+ */
 
 h1 {
     font-size: 2.0em; /* 32px */
@@ -268,24 +281,34 @@ h1 {
 h2 {
     font-size: 1.25em; /* 20px */
     line-height: 1.1; /* 22 / 20  */
-    margin: 1.65em 0 0.55em;
+    margin: 1.65em 0 -0.55em;
 }
 
 h3 {
     font-size: 1.125em; /* 18px */
-    line-height: 1.222; /* 22 / 18 */
-    margin: 1.833em 0 0.611em;
+    line-height: 1.23; /* 22 / 18 */
+    margin: 1.833em 0 -0.611em;
 }
 
 h4, h5, h6 {
   font-size: 1.0em; /* 16px */
   line-height: 1.375; /* 22 / 16 */
-  margin: 2.0625em 0 0.6875em;
+  margin: 2.0625em 0 -0.6875em;
 }
 
-hgroup {
-    margin: 1.375em 0;
+h2 + img,
+h3 + img,
+h4 + img,
+h5 + img,
+h6 + img,
+h2 + svg,
+h3 + svg,
+h4 + svg,
+h5 + svg,
+h6 + svg {
+    margin-top: 1.375em;
 }
+
 
 hgroup h1 + h2 {
     margin: -1.1em 0 1.1em;
@@ -307,19 +330,12 @@ article hr {
    Paragraphs
    ========================================================================== */
 
-p {
-    margin: 0 0 1.375em;
-}
-
-article p {
-    margin: 0;
-}
-
 /* "In continuous text mark all paragraphs after the first with an indent of at
  * least one en"
  * http://webtypography.net/Rhythm_and_Proportion/Blocks_and_Paragraphs/2.3.2/
  */
 article p + p {
+    margin-top: -1.375em;
     text-indent: 1.375em;
 }
 
@@ -329,8 +345,8 @@ article p + p {
 
 ul,
 ol {
-    padding: 0 0 0 1.375em;
-    margin: 1.375em 0 1.375em 1.375em;  /* 22px 0 22px 22px; */
+    padding-left: 1.375em;
+    margin-left: 1.375em;
 }
 
 ol ol,
@@ -344,9 +360,13 @@ ol       { list-style-type: decimal; }
 ol ol    { list-style-type: lower-alpha; }
 ol ol ol { list-style-type: lower-roman; }
 
-dl      { margin: 1.375em 0; }
-dt      { font-weight: bold; }
-dd      { margin-left: 2.75em; }
+dt {
+    font-weight: bold; /* POP */
+}
+dd {
+    margin-left: 1.375em; /* POP */
+    padding-left: 1.375em; /* POP */
+}
 
 
 nav ul,
@@ -388,26 +408,23 @@ svg:not(:root) {
  * Addresses margin not present in IE6/7/8/9, S5, O11
  */
 
-figure {
-    margin: 0;
-}
-
-/*
- * Addresses margin not present in IE6/7/8/9, S5, O11
- */
-
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
 
-article figure {
+figure {
     display: table;
-    margin: 1.375em auto; /* 22px */
+    margin-left: auto; /* 22px */
+    margin-right: auto;
+}
+
+figcaption {
+    display: block;
 }
 
 article caption,
-article figcaption {
+figcaption {
     display: table-caption;
     caption-side: bottom;
     text-align: center;
@@ -457,7 +474,8 @@ form {
  */
 
 fieldset {
-    margin: 0 0.125em 1.375em;
+    margin-left: 0.125em;
+    margin-right: 0.125em;
     padding: 0.4375em 1.125em 0.8125em;
 }
 
@@ -471,6 +489,10 @@ legend {
     *margin-left: -7px; /* 2 */
     padding: 0.6875em 0.125em;
     margin-left: 1.375em;
+}
+
+legend + p {
+    margin-top: 0;
 }
 
 /*
@@ -496,7 +518,7 @@ textarea {
 
 button,
 input {
-    line-height: normal; /* 1 */
+    line-height: 1.067; /* 1 */
     *overflow: visible;  /* 2 */
 }
 
