--- a/normalize.css
+++ b/normalize.css
@@ -24,6 +24,7 @@ ol,
 p,
 pre,
 section,
+table,
 ul {
     display: block;
     margin: 1.375em 0; /* POP */
@@ -64,7 +65,7 @@ html {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* 3 */
     -webkit-text-size-adjust: 100%; /* 4 */
     -ms-text-size-adjust: 100%; /* 4 */
-    line-height: 1.375; /* POP: base text size is 16px, line is 22px */
+    line-height: 138%; /* POP: base text size is 16px, line is 22px */
 }
 
 /*
@@ -169,8 +170,6 @@ strong {
 }
 
 blockquote {
-    padding-left: 1.375em; /* POP */
-    margin-left: 1.375em; /* POP */
     font-style: italic;
 }
 
@@ -202,7 +201,7 @@ samp {
     font-family: monospace, monospace;
     _font-family: 'courier new', monospace;
     font-size: 0.875em; /* POP: 14px */
-    line-height: 1.5714; /* POP: 22px */
+    /* line-height: 1.5714; /* POP: 22px */
 }
 
 /*
@@ -214,8 +213,14 @@ pre {
     white-space: pre;
     white-space: pre-wrap;
     word-wrap: break-word;
-    margin-left: 1.375em; /* POP */
-    padding-left: 1.375em; /* POP */
+}
+
+/* "Indent or center verse quotations"
+ * http://webtypography.net/Rhythm_and_Proportion/Blocks_and_Paragraphs/2.3.4/
+ */
+article blockquote,
+article pre {
+    padding-left: 2.75em; /* POP */
 }
 
 /*
@@ -266,52 +271,41 @@ sub {
    Headings (POP)
    ========================================================================== */
 
-/* For these to look right, an element placed after an h2-h6 should have a
+/* For these to look right, an element placed after an h1-h6 should have a
  * top margin of 22px (1.375em).
  */
 
-h1 {
+h1, .h1 {
     font-size: 2.0em; /* 32px */
     line-height: 1.375; /* 44 / 32 */
-    margin: 0.6875em 0; /* 22 / 32 */
+    margin: -0.6875em 0; /* -0.6875em;  22 / 32 */
+    padding: 0.6875em 0;
     text-align: center;
     font-weight: normal;
 }
 
-h2 {
+h2, .h2 {
     font-size: 1.25em; /* 20px */
-    line-height: 1.1; /* 22 / 20  */
-    margin: 1.65em 0 -0.55em;
+    margin: -1.1em 0;
+    padding: 1.65em 0 0.55em;
 }
 
-h3 {
+h3, .h3 {
     font-size: 1.125em; /* 18px */
-    line-height: 1.23; /* 22 / 18 */
-    margin: 1.833em 0 -0.611em;
+    margin: -1.222em 0;
+    padding: 1.833em 0 0.611em;
 }
 
-h4, h5, h6 {
-  font-size: 1.0em; /* 16px */
-  line-height: 1.375; /* 22 / 16 */
-  margin: 2.0625em 0 -0.6875em;
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+    font-size: 1.0em; /* 16px */
+    margin: -1.375em 0;
+    padding: 2.0625em 0 0.6875em;
 }
-
-h2 + img,
-h3 + img,
-h4 + img,
-h5 + img,
-h6 + img,
-h2 + svg,
-h3 + svg,
-h4 + svg,
-h5 + svg,
-h6 + svg {
-    margin-top: 1.375em;
-}
-
 
 hgroup h1 + h2 {
-    margin: -1.1em 0 1.1em;
+    margin: 1.1em 0;
     text-align: center;
 }
 
@@ -364,8 +358,8 @@ dt {
     font-weight: bold; /* POP */
 }
 dd {
-    margin-left: 1.375em; /* POP */
-    padding-left: 1.375em; /* POP */
+    padding-left: 2.75em; /* POP */
+    margin-left: 0;
 }
 
 
@@ -404,26 +398,16 @@ svg:not(:root) {
    Figures & Tables
    ========================================================================== */
 
-/*
- * Addresses margin not present in IE6/7/8/9, S5, O11
- */
-
-table {
+table,
+figure {
     border-collapse: collapse;
     border-spacing: 0;
-}
-
-figure {
     display: table;
     margin-left: auto; /* 22px */
     margin-right: auto;
 }
 
-figcaption {
-    display: block;
-}
-
-article caption,
+caption,
 figcaption {
     display: table-caption;
     caption-side: bottom;
@@ -432,6 +416,7 @@ figcaption {
 }
 
 article table {
+    border-collapse: separate;
     border-spacing: 0;
     margin: 1.26em auto; /* 22px */
     border-top: 0.125em solid; /* 2px */
@@ -444,13 +429,13 @@ article td {
 }
 
 article th {
-    line-height: 1.32;
+    line-height: 1.32; /* POP: make space for border */
     border-bottom: 0.0625em solid; /* 1px */
 }
 
 article tbody th,
 article tfoot th {
-    line-height: 1.375;
+    /* line-height: 1.375; */
     font-weight: normal;
     border: 0;
     text-align: left;
