--- a/normalize.css
+++ b/normalize.css
@@ -590,7 +590,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
     font-size: 1.0em; /* 16px */
-    padding: 2.0625em 0 0.6875em;
+    padding:  0.6875em 0 0.6875em; /* 11px 0 11px */
     margin: 0;
 }
 
