--- a/normalize.css
+++ b/normalize.css
@@ -287,7 +287,7 @@ kbd,
 pre,
 samp {
   font-family: monospace, monospace;
-  font-size: 1em;
+  font-size: 0.875em; /* 14px */
 }
 
 /* Forms
@@ -480,5 +480,5 @@ table {
 
 td,
 th {
-  padding: 0;
+    padding: 0 0.5em;
 }
